--- a/todo.txt
+++ b/todo.txt
@@ -3,6 +3,8 @@ ToDo (This is specific to maemo version.  For general todo, check in zaurus or q
 Make PreferencesDialog work.
     Remove VGroupBox and use 2 columns layout as mentioned in GUI guidelines.
     Move the Ok/Cancel buttons on the right.
+    Remake the SequenceDialog.  It will probably depend on the QuizFrame too.
+    I have hidden the scrollbar of bodyWrapper.  Not sure if it's a good idea.  What's the standard way to do that on Maemo?
 Use standard constants for margin, alignment, etc.
 Use standard layout as much as possible.
 
