--- a/todo.txt
+++ b/todo.txt
@@ -1,12 +1,14 @@
 ToDo (This is specific to maemo version.  For general todo, check in zaurus or qt4 branches)
 --------------------------------------------------------------------------------------------
 Make PreferencesDialog work.
+    Put back commented methods in PreferencesDialog:  addFontOverride(), removeFontOverride(), updateFontOverride()
     Remove VGroupBox and use 2 columns layout as mentioned in GUI guidelines.
     Move the Ok/Cancel buttons on the right.
     Remake the SequenceDialog.  It will probably depend on the QuizFrame too.
     I have hidden the scrollbar of bodyWrapper.  Not sure if it's a good idea.  What's the standard way to do that on Maemo?
     Replace ListView by a sequence of checkboxes for keyboard accelerators and languages of study.
     Position the scrollbar the right place, if possible, when invalid values are detected.
+    The Done button in the About window is not localized.
 Use standard constants for margin, alignment, etc.
 Use standard layout as much as possible.
 
