--- a/todo.txt
+++ b/todo.txt
@@ -1,21 +1,15 @@
 ToDo (This is specific to maemo version.  For general todo, check in zaurus or qt4 branches)
 --------------------------------------------------------------------------------------------
+The language selector doesn't work properly.
 Make PreferencesDialog work.
-    Put back commented methods in PreferencesDialog:  addFontOverride(), removeFontOverride(), updateFontOverride()
-    Remove VGroupBox and use 2 columns layout as mentioned in GUI guidelines.
-    Move the Ok/Cancel buttons on the right.
-    Remake the SequenceDialog.  It will probably depend on the QuizFrame too.
+    Remake the SequenceDialog.  It will probably depend on the QuizFrame too. Or use a QScrollArea.
     I have hidden the scrollbar of bodyWrapper.  Not sure if it's a good idea.  What's the standard way to do that on Maemo?
     Simplify Revealing Sequences (probably something similar to previous version): Less options is sometimes better :-)
     Position the scrollbar the right place, if possible, when invalid values are detected.
-    The Done button in the About window is not localized.
     The Reset Buttons for fonts do not work on Xephyr.  The problem is that the default font is not available (not installed?).
         Maybe we need to identify the best font and hardcode it for fremantle.
-Remove Glossary/Folder Title Label.  Instead, we should edit/rename a folder/glossary invoking a dialog.
-Add tabpanel for other data.  There is not enough space to fit everything in.  Have one for content, description, dates, etc.
-The language selector should be removed from VocabularyManagerFrame and set in a special dialog invocable from main menu.
+The Done button in the About window is not localized.
 Implement contextual menu for Import, Export, Cut, Copy, Paste
-In TermDialog, should I use a ScrollPane and readd the Ok/Cancel buttons?  Or should I always save the data when we close the window?
 Use standard constants for margin, alignment, etc.
 Use standard layout as much as possible.
 Review all code and check for comments.
