--- a/todo.txt
+++ b/todo.txt
@@ -9,6 +9,7 @@ Make PreferencesDialog work.
     The Reset Buttons for fonts do not work on Xephyr.  The problem is that the default font is not available (not installed?).
         Maybe we need to identify the best font and hardcode it for fremantle.
 The Done button in the About window is not localized.
+When the Search Dialog is closed, the main window is not brought in front.  Is it possible to do so programmatically?
 Implement contextual menu for Import, Export, Cut, Copy, Paste
 Use standard constants for margin, alignment, etc.
 Use standard layout as much as possible.
