Renabled Maximize for VocabularyManagerFrame via shortcut only.

--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,8 @@
 ToDo (This is specific to maemo version.  For general todo, check in zaurus or qt4 branches)
 --------------------------------------------------------------------------------------------
 Make all accelerators work.
+    Reconnect Maximize even though there is no visual widget to use it.
+Add credits for Maemo port: johnx, NHTM?, testers in previous package (Mikko, Hokir, Ed, etc.), Thomas Raschbacher.
 Replug copy/cut/paste accelerators.
 Strings to modify:
     Add a string before language selector.
@@ -12,9 +14,8 @@ Make PreferencesDialog work.
     The Reset Buttons for fonts do not work on Xephyr.  The problem is that the default font is not available (not installed?).
         Maybe we need to identify the best font and hardcode it for fremantle.
     The languages of interest take a lot of room.  Use specific dialog for these.
-The Done button in the About window is not localized.
-When the Search Dialog is closed, the main window is not brought in front.  Is it possible to do so programmatically?
-Implement contextual menu for Import, Export, Cut, Copy, Paste
+The Done button in the About window is not localized. Probably no big deal.
+Implement contextual menu for Import, Export, Cut, Copy, Paste?  For Cut, Copy, Paste, I think I will rather use Keyboard accelerators.  For Import/Export, main menu is not bad.
 Use standard constants for margin, alignment, etc.
 Use standard layout as much as possible.
 Review all code and check for comments.
