Reduced term image size a bit. HelpBrowser window is now a unique child window of MainWindow.

--- a/todo.txt
+++ b/todo.txt
@@ -1,10 +1,11 @@
 ToDo (This is specific to maemo version.  For general todo, check in zaurus or qt4 branches)
 --------------------------------------------------------------------------------------------
+Since qt-4.6, there is some problems with some layouts.  For example, the image button in a quiz walks over his label.  Also, the SequenceDialog is too tight.  The revealing sequences in the list are also truncated.
 When I import a glossary in some languages not already in Study List, 2 problems:  
 - It seems that the new languages are added in the Study List after the import but they should also be added in the
   Language Selectors.  
 - The message mentions the Language Filter option...  What do we do with that?
-- The Help (and probably Search) should not open multiple windows if clicked more than once.  When we quit the application, children windows should be closed as well.
+Replug cut/copy/paste in TermDialog?
 Verify if KeyActionListViewItem is still needed.
 Renable language filter?  If not, remove the accelerator and its mention in the help.
 Make PreferencesDialog work.
