--- a/etc/debian/changelog
+++ b/etc/debian/changelog
@@ -1,3 +1,12 @@
+tomotko (0.11.2-9fremantle3) unstable; urgency=low
+
+  * Improved layouts.
+  * Enlarged fonts.
+  * Improved online help.
+  * Fixed small bugs.
+
+ -- Frederic Bergeron <fbergeron@users.sourceforge.net>  Thu, 17 Jun 2010 13:41:45 +0900
+
 tomotko (0.11.2-9fremantle2) unstable; urgency=low
 
   * Finished hildonization.
