--- a/etc/debian/changelog
+++ b/etc/debian/changelog
@@ -1,3 +1,10 @@
+tomotko (0.11.2-10fremantle0) unstable; urgency=low
+
+  * Fixed empty quiz bug.
+  * Minor fixes in online help.
+
+ -- Frederic Bergeron <fbergeron@users.sourceforge.net>  Thu, 8 Jul 2010 11:00:00 +0900
+
 tomotko (0.11.2-9fremantle3) unstable; urgency=low
 
   * Improved layouts.
