--- a/etc/debian/changelog
+++ b/etc/debian/changelog
@@ -1,3 +1,10 @@
+tomotko (0.11.2-11fremantle0) unstable; urgency=low
+
+  * Added Hungarian language.
+  * Fixed typo.
+
+ -- Frederic Bergeron <fbergeron@users.sourceforge.net>  Sun, 22 Apr 2012 11:00:00 +0900
+
 tomotko (0.11.2-10fremantle0) unstable; urgency=low
 
   * Fixed empty quiz bug.
